[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/FPSCounter.gd" type="Script" id=1]
[ext_resource path="res://Assets/Materials/GrassGround.tres" type="Material" id=2]
[ext_resource path="res://Shaders/Grid.gdshader" type="Shader" id=3]
[ext_resource path="res://Logic/Views/BattleGrid.gd" type="Script" id=4]
[ext_resource path="res://Logic/Camera/CustomCamera.gd" type="Script" id=5]

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 0.05, 60 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 30, 1, 30 )

[sub_resource type="QuadMesh" id=5]
size = Vector2( 60, 60 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 3 )
shader_param/albedo = Color( 1, 1, 1, 0.952941 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/alpha_scissor_threshold = 0.98
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/columns = 8.0
shader_param/rows = 8.0
shader_param/border_width = 0.05
shader_param/border_color = Color( 0.482353, 0.482353, 0.482353, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0, 0.176471, 0.054902, 1 )

[node name="BattleGrid" type="Spatial"]
script = ExtResource( 4 )

[node name="Board" type="Spatial" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="GrassTexture" type="MeshInstance" parent="Board"]
transform = Transform( 1, 0, 0, 0, 0.05, 0, 0, 0, 1, 30, 0, 30 )
mesh = SubResource( 2 )
skeleton = NodePath("../..")
material/0 = ExtResource( 2 )

[node name="ClickArea" type="Area" parent="Board"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00116551, 0, 0.0299245 )

[node name="CollisionShape" type="CollisionShape" parent="Board/ClickArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30, -1, 30 )
shape = SubResource( 4 )

[node name="GridQuad" type="MeshInstance" parent="Board"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 30, 0.1, 30 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Bounds" type="Spatial" parent="."]

[node name="BoundLeft" type="CSGBox" parent="Bounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 31, -1, 0.61, 30.168 )
material = SubResource( 7 )

[node name="BoundUpper" type="CSGBox" parent="Bounds"]
transform = Transform( -4.37114e-08, 0, 31, 0, 1, 0, -1, 0, -1.35505e-06, 30.736, 0, -1.12107 )
material = SubResource( 7 )

[node name="BoundRight" type="CSGBox" parent="Bounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 31, 61.0401, 0, 31.0033 )
material = SubResource( 7 )

[node name="BoundLower" type="CSGBox" parent="Bounds"]
transform = Transform( -4.37114e-08, 0, -31, 0, 1, 0, 1, 0, -1.35505e-06, 29.1402, 0, 61.6111 )
material = SubResource( 7 )

[node name="CamPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707106, 0.707106, 0, -0.707106, 0.707106, 30, 0, 30 )

[node name="OrthoCamera" type="Camera" parent="CamPivot"]
transform = Transform( 1, 0, 0, 0, 1, 1.19209e-07, 0, -1.19209e-07, 1, 0, 1.246, 33 )
projection = 1
fov = 90.0
size = 50.0
near = 0.25
script = ExtResource( 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="CamPivot/OrthoCamera"]
transform = Transform( -0.727872, 0.567064, -0.38554, 0.373389, 0.799347, 0.470772, -0.575138, -0.198705, 0.793557, 0, 12.1884, 21.294 )
light_energy = 1.2
shadow_enabled = true
shadow_contact = 1.0

[node name="FPSCounter" type="Label" parent="CamPivot/OrthoCamera"]
margin_right = 40.0
margin_bottom = 14.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CamPivot/OrthoCamera"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackButton" type="Button" parent="CanvasLayer"]
margin_right = 12.0
margin_bottom = 20.0
text = "Go Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="CanvasLayer"]
margin_top = 24.0
margin_right = 64.0
margin_bottom = 44.0
text = "Start Combat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton2" type="Button" parent="CanvasLayer"]
margin_left = 1.0
margin_top = 63.0
margin_right = 95.0
margin_bottom = 83.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
text = "You lost :("
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="input_event" from="Board/ClickArea" to="." method="_on_ClickArea_input_event"]
[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/StartButton2" to="." method="_on_StartButton2_pressed"]
